# d2.data.pipeline

./: .gitignore  README.md  ingestion.py  load.py  main.py  pyproject.toml  transform.py  utils.py
domain/: __init__.py
domain/dc/: DestinyDefinitions.py  JsonWorldComponentContentPaths.py  JsonWorldContentPaths.py  Manifest.py  MobileGearAssetDataBasesContainer.py  MobileGearAssetDatabase.py  MobileGearCDN.py  MobileWorldContentPaths.py  Response.py
domain/pd/: DestinyDefinitions.py  JsonWorldComponentContentPaths.py  JsonWorldContentPaths.py  Manifest.py  MobileGearAssetDataBasesContainer.py  MobileGearAssetDatabase.py  MobileGearCDN.py  MobileWorldContentPaths.py  Response.py
sql/: copy_data_from_world_content.sql  copy_data_to_named_files.sql  copy_from_table.sql  copy_to.sql  create_world_content_tables.sql  drop_tables.sql  drop_world_content_tables.sql  scratch.sql  tables.sql
sql/d2/: StatType.sql  copy_data_to_destiny2.sql  create_destiny2_tables.sql  drop_destiny2_tables.sql  materialized_views.sql  tables.sql
