[project]
name = "d2-data-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofile>=3.9.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.10.18",
    "pandas>=2.3.1",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.3",
]
